# 3DRenderer

./: .gitignore  README.md  meson.build
src/: Camera.c  Camera.h  Clipping.c  Clipping.h  Display.c  Display.h  Lighting.c  Lighting.h  Matrix.c  Matrix.h  Mesh.c  Mesh.h  Swap.c  Swap.h  Texture.c  Texture.h  Triangle.c  Triangle.h  Vector.c  Vector.h  main.c  pch.h
